# torchfx

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  DOCS_PLAN.md  README.md  ROADMAP.md  api.html  conftest.py  genindex.html  getting_started.html  glossary.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/: issue-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  first-interaction.yml  issue-triage.yml  release.yml  wheels-cuda.yml  wheels.yml
_modules/: index.html
_modules/torchfx/: effect.html  effects.html  wave.html
_modules/torchfx/filter/: biquad.html  filterbank.html  fir.html  fused.html  iir.html
_modules/torchfx/logging/: config.html  performance.html
_modules/torchfx/realtime/: backend.html  exceptions.html  processor.html  ring_buffer.html  sounddevice_backend.html  stream.html
_modules/torchfx/validation/: exceptions.html  validators.html
_sources/: index.rst.txt
_sources/api/: core.rst.txt  effects.rst.txt  filters.rst.txt  index.rst.txt
_sources/blog/: 2025-12-13-release-021.md.txt  2026-01-06-deepwiki.md.txt  2026-03-27-release-050.md.txt  2026-04-13-release-052.md.txt  index.md.txt
_sources/guides/: index.md.txt
_sources/guides/advanced/: multi-channel.md.txt  performance.md.txt  pytorch-integration.md.txt
_sources/guides/core-concepts/: pipeline-operator.md.txt
_sources/guides/developer/: index.md.txt
_sources/guides/getting-started/: index.md.txt
_sources/guides/tutorials/: bpm-delay.md.txt  cli-guide.md.txt  custom-effects.md.txt  custom-filters.md.txt  ml-batch-processing.md.txt  multi-channel-effects.md.txt  real-time-processing.md.txt  series-parallel-filters.md.txt
_static/: documentation_options.js
api/: core.html  effects.html  filters.html  index.html  logging.html  realtime.html  validation.html
benchmark/: api_bench.py  bench.py  bench_harness.py  cuda_bench.py  fir_bench.py  iir_bench.py
benchmarks/: bench_fftconv.py  conftest.py  run_benchmarks.slurm  test_api_bench.py  test_biquad_bench.py  test_cuda_bench.py  test_design_benchmarks.py  test_fftconv_bench.py  test_fir_bench.py  test_hotpath_bench.py  test_iir_bench.py  test_pipeline_bench.py
benchmarks/profiles/: run_cpu_profile.py  run_cuda_profile.py  scenarios.py
benchmarks/slurm/: README.md  run_cuda_tests.sbatch  run_profiles.sbatch
blog/: 2025-04-10-early-release.html  2025-12-13-release-021.html  2026-01-06-deepwiki.html  2026-01-11-new-docs.html  2026-02-15-cli-interface.html  2026-02-15-release-040.html  2026-02-15-repl-live-performance.html  2026-03-27-release-050.html  2026-04-13-release-052.html  2026-05-03-release-053.html  index.html
blog/index/: 2025.html  2026.html  archive.html  atom.xml  author.html  category.html  drafts.html  tag.html
blog/index/author/: matteo-spanio.html
blog/index/category/: announcements.html  features.html  releases.html
blog/index/tag/: build-system.html  cli.html  cmake.html  cuda.html  dafx.html  documentation.html  fft.html  fusion.html  interactive.html  live-performance.html  logging.html  native-extension.html  open-source.html  packaging.html  performance.html  pipeline.html  real-time.html  repl.html  (+6 more)
docs/: DOCS_PLAN.md
docs/source/: api.rst  conf.py  glossary.rst  index.rst  references.bib
examples/: delay.py  live_repl_performance.py  multi_channel_effect.py  no_io_benchmark.py  quick_start.py  realtime_processing.py  sample_files.py  scipy_example.py  seq_benchmark.py  series_and_parallel_filters.py  stream_processing.py
guides/: api_stability.html  index.html  migration_guide.html
guides/advanced/: gpu-acceleration.html  index.html  multi-channel.html  performance.html  pytorch-integration.html
guides/core-concepts/: fx.html  index.html  pipeline-operator.html  type-system.html  wave.html
guides/developer/: benchmarking.html  documentation.html  index.html  project-structure.html  releasing.html  roadmap.html  style_guide.html  testing.html
guides/getting-started/: getting_started.html  index.html  installation.html
guides/tutorials/: bpm-delay.html  cli-guide.html  custom-effects.html  custom-filters.html  effects-design.html  filters-design.html  index.html  ml-batch-processing.html  multi-channel-effects.html  real-time-processing.html  series-parallel-filters.html
notebooks/: io.ipynb
perf/: baseline.html
src/cli/: __init__.py  __main__.py  app.py  parsing.py  repl.py
src/torchfx/: __init__.py  _deprecation.py  _ops.py  chain.py  effect.py  effects.py  typing.py  wave.py
tests/: test_biquad.py  test_chain_fusion.py  test_cli.py  test_cuda_fallback.py  test_cuda_kernels.py  test_deprecation.py  test_effects.py  test_fftconv.py  test_filter_base.py  test_filter_utils.py  test_filterbank.py  test_fir.py  test_fused.py  test_iir.py  test_iir_gaps.py  test_logging.py  test_native_design.py  test_ops_dispatch.py  test_realtime.py  test_validation.py  test_wave.py
tools/: build-wheel-index.py
wheels/cu128/: index.html
wiki/: 1 Overview.md  1.1 Quick Start.md  1.2 Installation.md  10 Changelog.md  2 Core Concepts.md  2.1 Wave Class.md  2.2 FX Base Class.md  2.3 Pipeline Operator.md  2.4 Type System.md  3 Effects.md  3.1 Gain.md  3.2 Normalize.md  3.3 Reverb.md  3.4 Delay.md  3.5 Creating Custom Effects.md  4 Filters.md  4.1 IIR Filters.md  4.2 FIR Filters.md  4.3 Parallel Filter Combination.md  4.4 Creating Custom Filters.md  5 Advanced Usage.md  5.1 Multi-Channel Processing.md  5.2 GPU Acceleration.md  5.3 PyTorch Integration.md  6 Examples.md  6.1 Series and Parallel Filters.md  6.2 Multi-Channel Effect Example.md  6.3 BPM-Synced Delay Example.md  7 Development Guide.md  7.1 Project Structure.md  7.2 Build and Dependencies.md  7.3 Development Workflow.md  7.4 Testing.md  7.5 Benchmarking.md  7.6 Documentation.md  8 API Reference.md  8.1 torchfx.Wave.md  8.2 torchfx.FX and Effects.md  8.3 torchfx.filter.md  8.4 torchfx.typing.md  (+3 more)
(+100 files in other folders)
