[project]
name = "torchfx"
version = "0.5.3"
description = "A GPU accelerated library for audio DSP based on PyTorch"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Matteo Spanio", email = "spanio@dei.unipd.it" }
]
requires-python = ">=3.10"
dependencies = [
    "annotated-types>=0.7.0",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
]
keywords = [
    "torch",
    "torchfx",
    "audio",
    "dsp",
    "gpu",
    "accelerated",
    "signal processing",
    "performance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]

[project.scripts]
torchfx = "cli.__main__:main"

[project.urls]
Repository = "https://github.com/matteospanio/torchfx"
Documentation = "https://matteospanio.github.io/torchfx/"
Changelog = "https://github.com/matteospanio/torchfx/blob/master/CHANGELOG"

[tool.mypy]
python_version = "3.10"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "torchfx.*",
  "cli.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "benchmarks.*"
ignore_errors = true

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TID", "ARG"]
lint.ignore = ["E501", "N803", "N806", "N812"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["src/torchfx"]
branch = true

[tool.coverage.report]
# Phase 1 gate: current local CPU-only coverage (with sounddevice omitted)
# is 88%. Ratchet this up as further phases land; never drop below without
# review.
fail_under = 87
# Skip files that are unreachable on a CPU-only workstation. Cluster runs
# exercise these via the sounddevice backend and CUDA kernels.
omit = [
    "src/torchfx/realtime/sounddevice_backend.py",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --tb=short --benchmark-disable --doctest-modules"
testpaths = ["tests", "src/torchfx"]
pythonpath = ["src"]
markers = [
    "benchmark: performance benchmark (enable with --benchmark-enable)",
]
# Doctest options. Enabled for the `pytest --doctest-modules src/torchfx`
# invocation in CI; ELLIPSIS lets long outputs use `...` and
# IGNORE_EXCEPTION_DETAIL ignores module-path prefixes on exception names.
doctest_optionflags = ["ELLIPSIS", "IGNORE_EXCEPTION_DETAIL", "NORMALIZE_WHITESPACE"]

[tool.docformatter]
recursive = true
blank = true

[build-system]
requires = ["scikit-build-core>=0.10", "torch>=2.6.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/torchfx", "src/cli"]
cmake.build-type = "Release"

# ---------- cibuildwheel ---------------------------------------------------
# Cross-platform CPU-only wheel builds for PyPI. The wheel CI workflow
# (.github/workflows/wheels.yml) runs cibuildwheel on Linux x86_64,
# macOS (x86_64 + arm64), and Windows x86_64 for every supported Python
# version. The C++ extension is linked against PyTorch's CPU build,
# but PyTorch's shared libraries are NOT bundled into the wheel --
# users install their preferred PyTorch build separately.
[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*-musllinux_*", "*-win32", "*-manylinux_i686"]
# Opt cp314 into the build set: cibuildwheel still classifies 3.14 as a
# CPython prerelease and refuses to match `cp314-*` selectors without
# this flag. Once cibuildwheel promotes 3.14 to its stable channel the
# flag becomes a no-op for it.
enable = ["cpython-prerelease"]
build-frontend = "build"
before-build = "pip install torch --index-url https://download.pytorch.org/whl/cpu"
environment = { TORCHFX_NO_CUDA = "1" }
# Forwarded into the manylinux container so pip resolves torch from the
# CPU index inside the build/test envs as well.
environment-pass = ["PIP_INDEX_URL", "PIP_EXTRA_INDEX_URL"]
# Smoke-test the built wheel: install + import + verify the native
# extension loaded.
test-command = 'python -c "import torchfx; assert torchfx.is_native_available()"'

[tool.cibuildwheel.linux]
# auditwheel sees libtorch_*.so as deps and would otherwise bundle
# hundreds of MB of PyTorch internals into the wheel. Exclude them so
# the wheel stays small and links against the user's torch install.
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} --exclude libtorch.so --exclude libtorch_cpu.so --exclude libtorch_python.so --exclude libc10.so"

[tool.cibuildwheel.macos]
# PyTorch 2.6's macOS headers use C++17 features (std::optional::value(),
# std::shared_mutex) marked unavailable below macOS 10.13. cibuildwheel's
# default x86_64 deployment target is 10.9, which then fails to compile
# torch/extension.h. PyTorch's own x86_64 macOS wheels are built for 11.0,
# so target the same here for both archs.
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", TORCHFX_NO_CUDA = "1" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies --exclude libtorch --exclude libc10"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel torch --index-url https://download.pytorch.org/whl/cpu"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --exclude torch_python.dll --exclude torch_cpu.dll --exclude c10.dll"

[dependency-groups]
cli = [
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "typer>=0.16.0",
    "watchdog>=4.0",
]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.1",
    "mypy>=1.16.1",
    "numba>=0.64.0",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.12.1",
    "scalene>=1.5.51",
    "scipy-stubs>=1.15.3.0",
]
realtime = [
    "sounddevice>=0.4.6",
]
cuda = [
    "ninja>=1.11",
]
docs = [
    "ablog>=0.11.12",
    "myst-parser>=4.0.1",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinxcontrib-mermaid>=1.2.3",
]
